--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,9 @@
 	{cowlib, ".*", {git, "git://github.com/ninenines/cowlib.git", "1.0.0"}},
 	{ranch, ".*", {git, "git://github.com/ninenines/ranch.git", "1.0.0"}}
 ]}.
+
+{port_specs, [
+	{"priv/websocket_utils.so", [
+		"c_src/websocket_utils.c"
+	]}
+]}.
